@@ -91,7 +91,7 @@ OP_UpdateAA=0x7bf6					# V
 OP_RespondAA=0x1fbd					# C 0x2bad
 OP_ReqClientSpawn=0x69cd			# V
 OP_SpawnDoor=0x6f2b					# V
-OP_GroundSpawn=0x0000				# V Was 0x5c85. Set to 0x0000 as Object_Struct needs encoding and zones may crash until then.
+OP_GroundSpawn=0x5c85				# V
 OP_SendZonepoints=0x2370			# V
 OP_SendAAStats=0x78b9				# C 
 OP_WorldObjectsSent=0x7b73			# V
@@ -376,8 +376,8 @@ OP_ShopPlayerBuy=0x436a				# C
 OP_ShopDelItem=0x63c8				# C
 
 # tradeskill stuff:
-OP_ClickObject=0x5f0d				# C
-OP_ClickObjectAction=0x5dbc			# C
+OP_ClickObject=0x33e5				# V
+OP_ClickObjectAction=0x41b5			# V
 OP_ClearObject=0x0b80				# C
 OP_RecipeDetails=0x49f4				# C
 OP_RecipesFavorite=0x1150			# C
